--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,23 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+
+             # 👇 NUEVO: worker de colas
+    queue:
+        image: 'sail-8.3/app'         # usa la misma imagen que laravel.test
+        depends_on:
+        - laravel.test
+        - mysql
+        environment:
+            LARAVEL_SAIL: 1
+            XDEBUG_MODE: 'off'           # evita overhead en el worker
+        volumes:
+        - .:/var/www/html
+        working_dir: /var/www/html
+        command: php artisan queue:work --sleep=3 --tries=3 --max-time=3600
+        restart: unless-stopped
+        networks:
+        - sail
     # redis:
     #     image: 'redis:alpine'
     #     ports:
